--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.error.whitelabel.enabled=false
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=036f40071fac7a
+spring.mail.password=a3f8f43778a694
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
